fix headings overlapping issue for good

--- a/frontend/global/scss/_content.scss
+++ b/frontend/global/scss/_content.scss
@@ -41,8 +41,8 @@ h1, .heading-plugin--h1 {
     }
 }
 
-* {
-    z-index: auto;
+main * {
+    z-index: 1;
 }
 
 @mixin header-style($tag, $font-size, $margin-top) {
@@ -53,7 +53,7 @@ h1, .heading-plugin--h1 {
         margin-top: -$offset;
         padding-top: $offset + $margin-top - $margin-bottom-global;
         font-size: $font-size;
-        z-index: -1;
+        z-index: 0;
     }
     #{$tag}:first-child, .heading-plugin--#{$tag}:first-child {
         padding-top: $offset + $margin-top;
